// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog组件 快照测试 不显示遮罩层 1`] = `
<div
  className="sc-bdvvtL iYczhz"
  data-sinoui-id="modal"
  onClick={[Function]}
  onKeyDown={[Function]}
>
  <div
    aria-modal="true"
    className="sc-eCImPb imiNwI sinoui-dialog sinoui-dialog--draggable"
    style={
      Object {
        "opacity": 1,
        "visibility": undefined,
      }
    }
    tabIndex={-1}
  >
    <h6
      className="sc-dkPtRN jrcdpV sinoui-typography sinoui-typography--h6 sc-hKwDye bcKUQp sinoui-dialog-title"
      color="textPrimary"
      type="h6"
    >
      Use Google location service?
    </h6>
    <h6
      className="sc-dkPtRN kaWoVs sinoui-typography sinoui-typography--subtitle1 sc-jrQzAO fjjDHp sinoui-dialog-content children theme"
      color="textSecondary"
      type="subtitle1"
    >
      Let Google help apps determine location. This means sending anonymous location data toGoogle, even when no apps are running.
    </h6>
    <div
      className="sc-kDTinF dBKHim sinoui-dialog-actions"
    >
      <button
        className="sc-gKclnd eeQlRM sinoui-base-button sc-iqseJM jEXtsf sinoui-button"
        color="primary"
        role="button"
        type="button"
      >
        Disagree
      </button>
      <button
        className="sc-gKclnd eeQlRM sinoui-base-button sc-iqseJM jEXtsf sinoui-button"
        color="primary"
        role="button"
        type="button"
      >
        Agree
      </button>
    </div>
  </div>
  <iframe
    className="sc-jRQBWg bcuAqN"
    frameBorder={0}
    scrolling="false"
  />
</div>
`;

exports[`Dialog组件 快照测试 基本使用 1`] = `
<div
  className="sc-bdvvtL iYczhz"
  data-sinoui-id="modal"
  onClick={[Function]}
  onKeyDown={[Function]}
>
  <div
    aria-hidden="true"
    className="sc-gsDKAQ ePKnZs"
    data-testid="sinoui-modal-backdrop"
    onClick={[Function]}
    style={
      Object {
        "opacity": 1,
        "visibility": undefined,
      }
    }
  />
  <div
    aria-modal="true"
    className="sc-eCImPb imiNwI sinoui-dialog sinoui-dialog--draggable"
    style={
      Object {
        "opacity": 1,
        "visibility": undefined,
      }
    }
    tabIndex={-1}
  >
    <h6
      className="sc-dkPtRN jrcdpV sinoui-typography sinoui-typography--h6 sc-hKwDye bcKUQp sinoui-dialog-title"
      color="textPrimary"
      type="h6"
    >
      Use Google location service?
    </h6>
    <h6
      className="sc-dkPtRN kaWoVs sinoui-typography sinoui-typography--subtitle1 sc-jrQzAO fjjDHp sinoui-dialog-content children theme"
      color="textSecondary"
      type="subtitle1"
    >
      Let Google help apps determine location. This means sending anonymous location data toGoogle, even when no apps are running.
    </h6>
    <div
      className="sc-kDTinF dBKHim sinoui-dialog-actions"
    >
      <button
        className="sc-gKclnd eeQlRM sinoui-base-button sc-iqseJM jEXtsf sinoui-button"
        color="primary"
        role="button"
        type="button"
      >
        Disagree
      </button>
      <button
        className="sc-gKclnd eeQlRM sinoui-base-button sc-iqseJM jEXtsf sinoui-button"
        color="primary"
        role="button"
        type="button"
      >
        Agree
      </button>
    </div>
  </div>
  <iframe
    className="sc-jRQBWg bcuAqN"
    frameBorder={0}
    scrolling="false"
  />
</div>
`;

exports[`Dialog组件 快照测试 宽度自适应 1`] = `
<div
  className="sc-bdvvtL iYczhz"
  data-sinoui-id="modal"
  onClick={[Function]}
  onKeyDown={[Function]}
>
  <div
    aria-hidden="true"
    className="sc-gsDKAQ ePKnZs"
    data-testid="sinoui-modal-backdrop"
    onClick={[Function]}
    style={
      Object {
        "opacity": 1,
        "visibility": undefined,
      }
    }
  />
  <div
    aria-modal="true"
    className="sc-eCImPb jIrvcn sinoui-dialog sinoui-dialog--draggable"
    style={
      Object {
        "opacity": 1,
        "visibility": undefined,
      }
    }
    tabIndex={-1}
  >
    <h6
      className="sc-dkPtRN jrcdpV sinoui-typography sinoui-typography--h6 sc-hKwDye bcKUQp sinoui-dialog-title"
      color="textPrimary"
      type="h6"
    >
      Use Google location service?
    </h6>
    <h6
      className="sc-dkPtRN kaWoVs sinoui-typography sinoui-typography--subtitle1 sc-jrQzAO fjjDHp sinoui-dialog-content children theme"
      color="textSecondary"
      type="subtitle1"
    >
      Let Google help apps determine location. This means sending anonymous location data toGoogle, even when no apps are running.
    </h6>
    <div
      className="sc-kDTinF dBKHim sinoui-dialog-actions"
    >
      <button
        className="sc-gKclnd eeQlRM sinoui-base-button sc-iqseJM jEXtsf sinoui-button"
        color="primary"
        role="button"
        type="button"
      >
        Disagree
      </button>
      <button
        className="sc-gKclnd eeQlRM sinoui-base-button sc-iqseJM jEXtsf sinoui-button"
        color="primary"
        role="button"
        type="button"
      >
        Agree
      </button>
    </div>
  </div>
  <iframe
    className="sc-jRQBWg bcuAqN"
    frameBorder={0}
    scrolling="false"
  />
</div>
`;

exports[`Dialog组件 快照测试 对话框将根据maxWidth的值进行自我调整 1`] = `
<div
  className="sc-bdvvtL iYczhz"
  data-sinoui-id="modal"
  onClick={[Function]}
  onKeyDown={[Function]}
>
  <div
    aria-hidden="true"
    className="sc-gsDKAQ ePKnZs"
    data-testid="sinoui-modal-backdrop"
    onClick={[Function]}
    style={
      Object {
        "opacity": 1,
        "visibility": undefined,
      }
    }
  />
  <div
    aria-modal="true"
    className="sc-eCImPb dqmhmt sinoui-dialog sinoui-dialog--draggable"
    style={
      Object {
        "opacity": 1,
        "visibility": undefined,
      }
    }
    tabIndex={-1}
  >
    <h6
      className="sc-dkPtRN jrcdpV sinoui-typography sinoui-typography--h6 sc-hKwDye bcKUQp sinoui-dialog-title"
      color="textPrimary"
      type="h6"
    >
      Use Google location service?
    </h6>
    <h6
      className="sc-dkPtRN kaWoVs sinoui-typography sinoui-typography--subtitle1 sc-jrQzAO fjjDHp sinoui-dialog-content children theme"
      color="textSecondary"
      type="subtitle1"
    >
      Let Google help apps determine location. This means sending anonymous location data toGoogle, even when no apps are running.
    </h6>
    <div
      className="sc-kDTinF dBKHim sinoui-dialog-actions"
    >
      <button
        className="sc-gKclnd eeQlRM sinoui-base-button sc-iqseJM jEXtsf sinoui-button"
        color="primary"
        role="button"
        type="button"
      >
        Disagree
      </button>
      <button
        className="sc-gKclnd eeQlRM sinoui-base-button sc-iqseJM jEXtsf sinoui-button"
        color="primary"
        role="button"
        type="button"
      >
        Agree
      </button>
    </div>
  </div>
  <iframe
    className="sc-jRQBWg bcuAqN"
    frameBorder={0}
    scrolling="false"
  />
</div>
`;

exports[`Dialog组件 快照测试 显示关闭图标 1`] = `
<div
  className="sc-bdvvtL iYczhz"
  data-sinoui-id="modal"
  onClick={[Function]}
  onKeyDown={[Function]}
>
  <div
    aria-hidden="true"
    className="sc-gsDKAQ ePKnZs"
    data-testid="sinoui-modal-backdrop"
    onClick={[Function]}
    style={
      Object {
        "opacity": 1,
        "visibility": undefined,
      }
    }
  />
  <div
    aria-modal="true"
    className="sc-eCImPb imiNwI sinoui-dialog sinoui-dialog--draggable"
    style={
      Object {
        "opacity": 1,
        "visibility": undefined,
      }
    }
    tabIndex={-1}
  >
    <h6
      className="sc-dkPtRN jrcdpV sinoui-typography sinoui-typography--h6 sc-hKwDye iKqbXg sinoui-dialog-title"
      color="textPrimary"
      type="h6"
    >
      Use Google location service?
      <button
        className="sc-gKclnd eeQlRM sinoui-base-button sc-iCfMLu rfQyt sinoui-icon-button sc-pVTFL fHGeey sinoui-dialog-title__icon"
        color="textSecondary"
        onClick={[Function]}
        role="button"
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-furwcr kBhAuZ sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
        </svg>
      </button>
    </h6>
    <h6
      className="sc-dkPtRN kaWoVs sinoui-typography sinoui-typography--subtitle1 sc-jrQzAO fjjDHp sinoui-dialog-content children theme"
      color="textSecondary"
      type="subtitle1"
    >
      Let Google help apps determine location. This means sending anonymous location data toGoogle, even when no apps are running.
    </h6>
    <div
      className="sc-kDTinF dBKHim sinoui-dialog-actions"
    >
      <button
        className="sc-gKclnd eeQlRM sinoui-base-button sc-iqseJM jEXtsf sinoui-button"
        color="primary"
        role="button"
        type="button"
      >
        Disagree
      </button>
      <button
        className="sc-gKclnd eeQlRM sinoui-base-button sc-iqseJM jEXtsf sinoui-button"
        color="primary"
        role="button"
        type="button"
      >
        Agree
      </button>
    </div>
  </div>
  <iframe
    className="sc-jRQBWg bcuAqN"
    frameBorder={0}
    scrolling="false"
  />
</div>
`;

exports[`Dialog组件 快照测试 设置全屏显示 1`] = `
<div
  className="sc-bdvvtL iYczhz"
  data-sinoui-id="modal"
  onClick={[Function]}
  onKeyDown={[Function]}
>
  <div
    aria-hidden="true"
    className="sc-gsDKAQ ePKnZs"
    data-testid="sinoui-modal-backdrop"
    onClick={[Function]}
    style={
      Object {
        "opacity": 1,
        "visibility": undefined,
      }
    }
  />
  <div
    aria-modal="true"
    className="sc-eCImPb ksfSHp sinoui-dialog sinoui-dialog--draggable"
    style={
      Object {
        "opacity": 1,
        "visibility": undefined,
      }
    }
    tabIndex={-1}
  >
    <h6
      className="sc-dkPtRN jrcdpV sinoui-typography sinoui-typography--h6 sc-hKwDye bcKUQp sinoui-dialog-title"
      color="textPrimary"
      type="h6"
    >
      Use Google location service?
    </h6>
    <h6
      className="sc-dkPtRN kaWoVs sinoui-typography sinoui-typography--subtitle1 sc-jrQzAO fjjDHp sinoui-dialog-content children theme"
      color="textSecondary"
      type="subtitle1"
    >
      Let Google help apps determine location. This means sending anonymous location data toGoogle, even when no apps are running.
    </h6>
    <div
      className="sc-kDTinF dBKHim sinoui-dialog-actions"
    >
      <button
        className="sc-gKclnd eeQlRM sinoui-base-button sc-iqseJM jEXtsf sinoui-button"
        color="primary"
        role="button"
        type="button"
      >
        Disagree
      </button>
      <button
        className="sc-gKclnd eeQlRM sinoui-base-button sc-iqseJM jEXtsf sinoui-button"
        color="primary"
        role="button"
        type="button"
      >
        Agree
      </button>
    </div>
  </div>
  <iframe
    className="sc-jRQBWg bcuAqN"
    frameBorder={0}
    scrolling="false"
  />
</div>
`;

exports[`Dialog组件 快照测试 设置弹窗不可以拖拽 1`] = `
<div
  className="sc-bdvvtL iYczhz"
  data-sinoui-id="modal"
  onClick={[Function]}
  onKeyDown={[Function]}
>
  <div
    aria-hidden="true"
    className="sc-gsDKAQ ePKnZs"
    data-testid="sinoui-modal-backdrop"
    onClick={[Function]}
    style={
      Object {
        "opacity": 1,
        "visibility": undefined,
      }
    }
  />
  <div
    aria-modal="true"
    className="sc-eCImPb imiNwI sinoui-dialog"
    style={
      Object {
        "opacity": 1,
        "visibility": undefined,
      }
    }
    tabIndex={-1}
  >
    <h6
      className="sc-dkPtRN jrcdpV sinoui-typography sinoui-typography--h6 sc-hKwDye bcKUQp sinoui-dialog-title"
      color="textPrimary"
      type="h6"
    >
      Use Google location service?
    </h6>
    <h6
      className="sc-dkPtRN kaWoVs sinoui-typography sinoui-typography--subtitle1 sc-jrQzAO fjjDHp sinoui-dialog-content children theme"
      color="textSecondary"
      type="subtitle1"
    >
      Let Google help apps determine location. This means sending anonymous location data toGoogle, even when no apps are running.
    </h6>
    <div
      className="sc-kDTinF dBKHim sinoui-dialog-actions"
    >
      <button
        className="sc-gKclnd eeQlRM sinoui-base-button sc-iqseJM jEXtsf sinoui-button"
        color="primary"
        role="button"
        type="button"
      >
        Disagree
      </button>
      <button
        className="sc-gKclnd eeQlRM sinoui-base-button sc-iqseJM jEXtsf sinoui-button"
        color="primary"
        role="button"
        type="button"
      >
        Agree
      </button>
    </div>
  </div>
  <iframe
    className="sc-jRQBWg bcuAqN"
    frameBorder={0}
    scrolling="false"
  />
</div>
`;
